tests/ui/debug.goml
debug: true
screenshot-comparison: false
go-to: "file://" + |CURRENT_DIR| + "/" + |DOC_PATH| + "/elements.html"
show-text: true
compare-elements-css-false: (".content>.right>p", ".content>.left", ["color"])
//~^ ERROR: assert didn't fail
